--- a/css/class-9/style.css
+++ b/css/class-9/style.css
@@ -1,3 +1,6 @@
+body {
+    background-color: bisque;
+}
 .figure-imagen-fresa {
     margin: 0%;
 }
@@ -5,4 +8,15 @@
     width: 280px;
     height: 158px;
     border-radius: 15%;
+    border-style: dotted;
+    border-color: #ffffff;
+    border-width: 5px;
+}
+.imagen_milkshake {
+    width: 280px;
+    height: 158px;
+    border-radius: 15%;
+    border-style: dotted;
+    border-color: red blue blueviolet whitesmoke;
+    border-width: 5px;
 }
