--- a/css/class-22/style.css
+++ b/css/class-22/style.css
@@ -22,7 +22,13 @@ body {
 }
 
 /* ----- */
-
+dd {
+    margin-inline-start:1.3%;
+}
+.h4-title {
+    margin-block-end:0.5%;
+    padding-block-start:10px;
+}
 #title-dates {
     margin-block-start: 5%;
     margin-inline-start: 5%;
