docs: added new designs with BEM

--- a/css/class-23/style.css
+++ b/css/class-23/style.css
@@ -48,3 +48,36 @@ input:focus {
     color: blue;
     font-weight: bold;
 }
+.list-def {
+    padding-block-start: 0px;
+    padding-block-end: 18px;
+    padding-inline-start: 0px;
+    padding-inline-end: 0px;
+    margin-inline: 80px; /* Para determinar los espacios de los costados */
+    border: 10px solid;
+    border-radius: 30px;
+}
+.list-def--color-red {
+    border-color:rgb(255, 0, 0);
+}
+.list-def--color-yellow {
+    border-color:rgb(255, 242, 0);
+}
+.list-def__title {
+    padding-block-start: 5px;
+    padding-block-end: 7px;
+    padding-inline-start: 5px;
+    font-weight: bold;
+    border: 7px solid;
+    border-radius: 15px 15px 50px 0px;
+    margin-block-start: 0px;
+    margin-block-end: 8px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.list-def__extracto {
+    margin-inline-start: 55px;
+    margin-inline-end: 55px;
+}
+
+/* Las propiedades solas o independientes, sirven para generar bloques. Y cuando queramos crear modificadores, podemos alterar los estilos utilizando propiedades deribadas, como por ejemplo: 'border' para crear bloques, y 'border-color' para generar modificadores.  */
