docs: playing with BEM selectors and styles

--- a/css/class-23/style.css
+++ b/css/class-23/style.css
@@ -57,11 +57,20 @@ input:focus {
     border: 10px solid;
     border-radius: 30px;
 }
-.list-def--color-red {
-    border-color:rgb(255, 0, 0);
+.list-def--border-ridge {
+    border-style: ridge;
 }
-.list-def--color-yellow {
-    border-color:rgb(255, 242, 0);
+.list-def--border-double {
+    border-style: double;
+}
+.list-def--border-gold {
+    border-color: #c2a25d;
+}
+.list-def--background-green {
+    background-color: #053426;
+}
+.list-def--background-navyblue {
+    background-color:rgb(0, 66, 128);
 }
 .list-def__title {
     padding-block-start: 5px;
@@ -75,9 +84,22 @@ input:focus {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+.list-def__title--background-golden {
+    border-color:#c2a25d; /* ex (#cab577) */
+    background-color:#c2a25d; /* ex (#cab577) */
+}
+.list-def__title--text-green {
+    color: #053426;
+}
+.list-def__title--text-blue {
+    color: rgb(0, 66, 128);
+}
 .list-def__extracto {
     margin-inline-start: 55px;
     margin-inline-end: 55px;
 }
+.list-def__extracto--text-golden {
+    color: #cabf9e;
+}
 
-/* Las propiedades solas o independientes, sirven para generar bloques. Y cuando queramos crear modificadores, podemos alterar los estilos utilizando propiedades deribadas, como por ejemplo: 'border' para crear bloques, y 'border-color' para generar modificadores.  */
+/* "Shorthand property": (Propiedad abreviada): Las propiedades solas o independientes, sirven para generar bloques; y cuando queramos crear modificadores, podemos alterar los estilos utilizando propiedades deribadas, como por ejemplo: 'border' para crear bloques, y 'border-color' para generar modificadores.  */
