--- a/css/index/index.css
+++ b/css/index/index.css
@@ -20,10 +20,10 @@ a {
 }
 
 
-.bloquedef__texto-resaltado {
+.extracto__texto-resaltado {
     color: rgb(254, 248, 161);
 }
-.bloquedef--bold {
+.extracto--bold {
     font-weight: bold;
 }
 
@@ -56,6 +56,8 @@ a {
 }
 .images__img {
     border-radius: 30px;
+    width: 100%;
+    /* min-width: 150px; */
 }
 .images__description {
     margin-inline: 20px;
