--- a/css/23-pseudo-clases-y-pseudo-elementos.css
+++ b/css/23-pseudo-clases-y-pseudo-elementos.css
@@ -143,7 +143,7 @@ selector:first-of-type { /* Se seleccionará al elemento que sea el PRIMER HERMA
     border: 1px solid blue;
 }
 
-.box:nth-of-type(#) {
+.box:nth-of-type(2) {
     background-color: purple;
 }
 .box:nth-child(4) {
